# sdypy

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.dev.rst  README.md  README.rst  REQUIREMENTS.md  pyproject.toml  readthedocs.yaml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  python-package.yml  release-and-publish-to-pypi.yml
docs/: requirements.txt
docs/seps/: conf.py  content.rst  index.rst.tmpl  roadmap.rst  scope.rst  sep-0000.rst  sep-0001.rst  sep-0002.rst  sep-0003.rst  sep-0004.rst  sep-0005.rst  sep-template.rst
docs/seps/tools/: build_index.py
docs/source/: SEPs.rst  code.rst  conf.py  index.rst  packages.rst  sdypy_excitation.rst  sdypy_frf.rst
docs/source/_build/html/: .buildinfo  code.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/html/.doctrees/: code.doctree  environment.pickle  getting_started.doctree  index.doctree
docs/source/_build/html/.doctrees/building/: faq.doctree  index.doctree  linux.doctree  macosx.doctree  windows.doctree
docs/source/_build/html/.doctrees/dev/: code_of_conduct.doctree  contributing.doctree  governance.doctree  governance_people.doctree  pep8.doctree  readme.dev.doctree
docs/source/_build/html/_sources/: getting_started.rst.txt  index.rst.txt
docs/source/_build/html/_sources/dev/: contributing.rst.txt  governance.rst.txt  governance_people.rst.txt  pep8.rst.txt  readme.dev.rst.txt
docs/source/_build/html/building/: faq.html  index.html  linux.html  macosx.html  windows.html
docs/source/_build/html/dev/: code_of_conduct.html  contributing.html  governance.html  governance_people.html  pep8.html  readme.dev.html
docs/source/_static/: .gitignore
docs/source/dev/: code_of_conduct.rst  contributing.rst  governance.rst  governance_people.rst  readme.dev.rst
examples/: basic_example.py
openspec/changes/archive/2026-07-01-establish-docs-website/: design.md  proposal.md
openspec/changes/archive/2026-07-01-establish-docs-website/specs/documentation/: spec.md
openspec/changes/archive/2026-07-01-establish-testing-ci-baseline/: tasks.md
openspec/changes/archive/2026-07-01-establish-testing-ci-baseline/specs/testing-ci/: spec.md
openspec/changes/archive/2026-07-01-expose-sep005-standard/: design.md  proposal.md
openspec/changes/archive/2026-07-01-expose-sep005-standard/specs/sep005-standard/: spec.md
openspec/changes/archive/2026-07-01-packaging-hygiene-sweep/: proposal.md  tasks.md
openspec/changes/archive/2026-07-01-standardize-package-template/: proposal.md
openspec/changes/archive/2026-07-01-standardize-public-api/: tasks.md
openspec/changes/archive/2026-07-01-unify-namespace-mechanism/specs/namespace-packaging/: spec.md
openspec/changes/establish-docs-website/: tasks.md
openspec/changes/establish-testing-ci-baseline/: design.md  proposal.md
openspec/changes/expose-sep005-standard/: tasks.md
openspec/changes/packaging-hygiene-sweep/: design.md  tasks.md
openspec/changes/packaging-hygiene-sweep/specs/distribution-packaging/: spec.md
openspec/changes/standardize-package-template/: design.md  tasks.md
openspec/changes/standardize-package-template/specs/sibling-package-template/: spec.md
openspec/changes/standardize-public-api/: design.md  proposal.md  tasks.md
openspec/changes/standardize-public-api/specs/public-api/: spec.md
openspec/changes/unify-namespace-mechanism/: design.md  proposal.md  tasks.md
openspec/specs/distribution-packaging/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/namespace-packaging/: spec.md
openspec/specs/public-api/: spec.md
openspec/specs/sep005-standard/: spec.md
openspec/specs/sibling-package-template/: spec.md
openspec/specs/testing-ci/: spec.md
sdypy/: __init__.py  __main__.py
sdypy/core/: __init__.py
tests/: test_basic.py  test_interop.py  test_namespace_conformance.py  test_public_api.py
tools/: check_docs.py  check_public_api.py  check_sibling_template.py
