[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdypy"
version = "0.5.1"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "SDyPy - Structural Dynamics Python"
readme = "README.rst"
keywords = ["Python", "Structural Dynamics"]
requires-python = ">=3.10"
dependencies = [
    "sdypy-EMA",
    "sdypy-io",
    "sdypy-FRF",
    "sdypy-excitation",
    "sdypy-view",
    "sdypy-model",
    "sdypy-sep005",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "License :: OSI Approved :: MIT License",
]

# For namespace packages (sdypy is the namespace)
[tool.hatch.build.targets.wheel]
include = ["sdypy"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]
dev = [
    "sdypy[docs]",
    "twine",
    "wheel",
    "pytest",
    "build",
]

[project.urls]
homepage = "https://github.com/sdypy/sdypy"
documentation = "https://sdypy.readthedocs.io/en/latest/"
source = "https://github.com/sdypy/sdypy"

# Source-only sdist: an explicit allow-list so development-only directories
# (openspec/, .claude/) and built docs are never published in the sdist.
[tool.hatch.build.targets.sdist]
include = [
    "sdypy/",
    "tests/",
    "docs/",
    "examples/",
    "README.rst",
    "LICENSE",
    "CONTRIBUTING.rst",
    "pyproject.toml",
]
exclude = [
    "docs/_build",
    "docs/**/_build",
    "docs/**/_build/**",
]